add debian base image

--- a/laravel/.build-env.sample
+++ b/laravel/.build-env.sample
@@ -2,4 +2,4 @@
 # she-bang above are optional
 # but nice to have for syntax highlight#!/bin/bash
 SOURCE_NAME=ubuntu
-# BUILD_IMAGE_ARGS="APP_USER=nginx APP_HOME=/etc/nginx  WWW_ROOT=/var/ww/html"
+# BUILD_IMAGE_ARGS="APP_USER=nginx APP_HOME=/etc/nginx  WWW_ROOT=/var/www/html"
