--- a/laravel/.build-env.sample
+++ b/laravel/.build-env.sample
@@ -2,4 +2,5 @@
 # she-bang above are optional
 # but nice to have for syntax highlight#!/bin/bash
 SOURCE_NAME=ubuntu
+NGINX_VERSION=1.22
 # BUILD_IMAGE_ARGS="APP_USER=nginx APP_HOME=/etc/nginx  WWW_ROOT=/var/www/html"
