fix laravel template and add sample manifest

--- a/laravel/debian11/Dockerfile
+++ b/laravel/debian11/Dockerfile
@@ -18,10 +18,10 @@ ENV NAME=laravel \
   PHP_VERSION=$PHP_VERSION \
   NODE_VERSION=$NODE_VERSION \
   LARAVEL_VERSION=$LARAVEL_VERSION \
-  OS_NAME=ubuntu \
-  OS_VERSION=20.04 \
-  OS_CODENAME=focal \
-  OS_FULLNAME='Focal Fossa' \
+  OS_NAME=debian \
+  OS_VERSION=11 \
+  OS_CODENAME=bullseye \
+  OS_FULLNAME='Bullseye' \
   APP_HOME=$APP_HOME \
   WWW_ROOT=$WWW_ROOT \
   APP_USER=$APP_USER \
