--- a/php-fpm/debian11/.build-env.sample
+++ b/php-fpm/debian11/.build-env.sample
@@ -2,6 +2,6 @@
 # she-bang above are optional
 # but nice to have for syntax highlight
 SOURCE_NAME=debian
-SOURCE_TAG=bullseye
+SOURCE_TAG=bullseye-slim
 APP_VERSION=7.4
 PHP_VERSION=7.4
