--- a/php-fpm/debian12/.build-env.sample
+++ b/php-fpm/debian12/.build-env.sample
@@ -2,6 +2,6 @@
 # she-bang above are optional
 # but nice to have for syntax highlight
 SOURCE_NAME=debian
-SOURCE_TAG=bookworm
-APP_VERSION=8.1
-PHP_VERSION=8.1
+SOURCE_TAG=bookworm-slim
+APP_VERSION=8.2
+PHP_VERSION=8.2
